--- a/_config.yml
+++ b/_config.yml
@@ -185,11 +185,11 @@ kramdown:
 # These settings are specific to Hydejack.
 
 hydejack:
-  # Configure the order of complementary content on blog posts
-  post_addons:         [about, newsletter, related, random, comments]
+  # Configure the order of complementary content on blog posts [about, newsletter, related, random, comments]
+  post_addons:         [about, newsletter, related, random]
 
-  # Configure the order of complementary content on project pages
-  project_addons:      [about, newsletter, other, comments]
+  # Configure the order of complementary content on project pages [about, newsletter, other, comments]
+  project_addons:      [about, newsletter, other]
 
   # Set to `true` if you don't want to show an icon indicating external links
   no_mark_external:    false
