--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ menu:
 #    url:               /example/
 #  - title:             Documentation
 #    url:               /docs/
-  - title:             Autor
+  - title:             About
     url:               /about/
 
 # Add links to the footer.
@@ -208,7 +208,7 @@ hydejack:
   # Set to true to disable the built-in search functionality.
   # Note that search is disabled during local use to save on build time.
   # Run Jekyll with the `JEKYLL_ENV` environment variable set to `production` to enable.
-  no_search:           false
+  no_search:           true
 
   # Set to `true` if you do not want parts of the css inlined in <head/>
   # This will increase site build speed dramatically!
@@ -358,11 +358,11 @@ plugins:
 #   admins:              <id>
 
 # Used on index and about sites
-# social:
-#   name:                <firstname> <lastname>
+# social: 
+#   name:                Nain Taleb
 #   links:
 #     - https://twitter.com/<username>
-#     - https://github.com/<username>
+#     - https://github.com/tecnocosmo
 
 
 # Plugin Configs
