Publicación Practicas organicas en ganado bovino

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -31,7 +31,7 @@ author1:
     # twitter:         <username>
     github:          TecnoCosmo
     email:           taleb.tropia@proton.me
-    # rss:             https://<url>/feed.xml
+    rss:             https://tecnocosmo.github.io/feed.xml
     # facebook:        <username>
     # google:          <number>
     # vk:              <username>
