PDF LABORATORIO DE ROBOTICA ACTUAL

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -28,11 +28,11 @@ author1:
   # Comment/uncommet to show/hide
   # Rearrange to change the order in which they appear
   social:
-    # twitter:         <username>
+    twitter:         Tecno_Cosmo
     github:          TecnoCosmo
-    email:           taleb.tropia@proton.me
+    email:           taleb.tropia@hotmail.com
     #rss:               <https:>
-    # facebook:        <username>
+    facebook:        TecnoKosmo
     # google:          <number>
     # vk:              <username>
     # youtube:         <string_string_string>
