--- a/_config.yml
+++ b/_config.yml
@@ -17,10 +17,10 @@
 
 # Language of your content in 2-letter code, e.g.: en, de.
 # You may also provide a location, e.g.: en-us, de_AT.
-lang:                  en
+lang:                  es
 
 # The title of your blog. Used in the sidebar and the browser tab.
-title:                 Cosmo
+title:                 Kosmo
 
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
@@ -31,7 +31,7 @@ description:           >
 tagline:               Crea y Transforma
 
 # A list of keywords for your blog
-keywords:              [Ciencia, Tecnología]
+keywords:              [Proyectos, Ciencia, Tecnología]
 
 # A (square) logo for your site.
 # If provided, it will be shown at the top of the sidebar.
@@ -41,8 +41,8 @@ logo:                  /assets/img/logo.png
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   # Used by `jekyll-feed`:
-  name:                <Nain> <Taleb>
-  email:               <taleb.tropia@proton.me>
+  name:                <Samira> <Grayeb>
+  email:               <taleb.tropia@hotmail.com>
   # # Used by `jekyll-seo-tag`:
   # twitter:             <username>
 
@@ -54,6 +54,8 @@ menu:
 #    url:               /docs/
   - title:             About
     url:               /about/
+  - contac:            Contacto
+    url:               /contac/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
@@ -266,13 +268,13 @@ hydejack:
   # Note that dark mode only works in the PRO version of Hydejack.
   dark_mode:
     # Set to `true` to always use the dark theme.
-    always:            true
+    always:            false
 
     # Set to `true` to use the dark theme based on visitors' preference (OS setting).
-    dynamic:           true
+    dynamic:           false
 
     # Set to `true` to allow visitors to switch between light and dark mode.
-    icon:              true
+    icon:              false
 
   # ⚡️ DANGER ZONE ⚡️
   # ----------------
