Actualizar _config.yml2

--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ menu:
 #    url:               /docs/
   - title:             About
     url:               /about/
-  - contac:            Contacto
+  - title:            Contacto
     url:               /contac/
 
 # Add links to the footer.
