--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,8 +2,8 @@
 # Must be the same as `author` in `_config.yml`.
 # Change `author1` to your shortname.
 author1:
-  name:              Nain Taleb
-  email:             taleb.tropia@proton.me>
+  name:              Samira Grayeb
+  email:             taleb.tropia@hotmail.com>
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
@@ -28,11 +28,11 @@ author1:
   # Comment/uncommet to show/hide
   # Rearrange to change the order in which they appear
   social:
-    twitter:         Tecno_Cosmo
+    twitter:         TecnoKosmo
     # github:          TecnoCosmo
     email:           taleb.tropia@hotmail.com
     #rss:               <https:>
-    facebook:        TecnoKosmo
+    # facebook:        TecnoKosmo
     # google:          <number>
     # vk:              <username>
     # youtube:         <string_string_string>
@@ -41,7 +41,7 @@ author1:
     # spotify:         <user>/<number>
     # soundcloud:      <username>
     # lastfm:          <username>
-    # instagram:       <username>
+    instagram:       tecnokosmo
     # flickr:          <string@string>
     # 500px:           <username>
     # dribbble:        <username>
