Actualizar contac.md

--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ menu:
 #    url:               /example/
 #  - title:             Documentation
 #    url:               /docs/
-  - title:             About
+  - title:             Acerca de
     url:               /about/
   - title:            Contacto
     url:               /contac/
