Actualizar contac.md2

--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ menu:
 #    url:               /example/
 #  - title:             Documentation
 #    url:               /docs/
-  - title:             Acerca de
+  - title:             Nosotros
     url:               /about/
   - title:            Contacto
     url:               /contac/
