--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,16 +8,18 @@ author1:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Mi pasión es por la ciencia y su divulgación, la ingeniería, la `resolución` de problemas y el impacto comunitario.
+    Mi pasión es por la ciencia y su divulgación, la ingeniería, la solución de problemas y el impacto comunitario.
     Mi camino se centra en fusionar la tecnología con el propósito de mejorar la vida de las personas.
-    Con un enfoque discreto pero dedicado, trabajo en proyectos que combinan mi amor por la ingeniería con la `responsabilidad social`. 
+    Con un enfoque discreto pero dedicado, trabajo en proyectos que combinan mi amor por la ingeniería con la 
+    `responsabilidad social`. 
+    
     Fuera del ámbito profesional, me encuentro explorando la ciencia, disfrutando de los deportes y buscando maneras de contribuir positivamente a mi comunidad.
     Mi objetivo es crear un `cambio significativo`, no solo en el mundo digital, sino también en el entorno que me rodea.
     
     
 
   # This photo will be used in the about section
-  # picture:
+   picture:
     #path:            https://via.placeholder.com/128x128
     # srcset is optional, but can be used to provide higher res versions for retina displays
     # srcset:
@@ -69,16 +71,16 @@ author1:
     # keybase          <username>
 
 # Another author (optional)
-author2:
-  name:              <firtname> <lastname>
-  email:             <mail@domain.tld>
-  about:             |
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+#author2:
+#  name:              <firtname> <lastname>
+#  email:             <mail@domain.tld>
+#  about:             |
+#    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+#    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+#    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 
-    Open `_data/authors.yml` to edit this text.
+#    Open `_data/authors.yml` to edit this text.
 
-  picture:           https://placehold.it/128x128
-  twitter:           <username>
-  github:            <username>
+#  picture:           https://placehold.it/128x128
+#  twitter:           <username>
+#  github:            <username>
