--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ logo:                  /assets/img/logo.png
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   # Used by `jekyll-feed`:
-  name:                <Samira Grayeb>
+  name:                <Samira> <Grayeb>
   email:               <taleb.tropia@hotmail.com>
   # # Used by `jekyll-seo-tag`:
   twitter:             <TecnoKosmo>
