--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,9 +1,9 @@
 # The primary author of this blog.
 # Must be the same as `author` in `_config.yml`.
 # Change `author1` to your shortname.
-author1:
-  name:              <Samira> <Grayeb>
-  email:             <taleb.tropia@hotmail.com>
+Samira:
+  name:              Samira Grayeb
+  email:             taleb.tropia@hotmail.com
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
