--- a/_config.yml
+++ b/_config.yml
@@ -41,8 +41,8 @@ logo:                  /assets/img/logo.png
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   # Used by `jekyll-feed`:
-  name:                <Samira> <Grayeb>
-  email:               <taleb.tropia@hotmail.com>
+  name:                Samira Grayeb
+  email:               taleb.tropia@hotmail.com
   # # Used by `jekyll-seo-tag`:
   twitter:             <TecnoKosmo>
 
