--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ author:
   name:                Samira Grayeb
   email:               taleb.tropia@hotmail.com
   # # Used by `jekyll-seo-tag`:
-  twitter:             <TecnoKosmo>
+  twitter:             TecnoKosmo
 
 # Add links to the sidebar.
 menu:
