--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,7 +8,7 @@ Samira:
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Samira Grayeb
+    Samira Grayeb: 
     Mi pasión es por la ciencia y su divulgación, la ingeniería, la solución de problemas y el impacto comunitario.
     Mi camino se centra en fusionar la tecnología con el propósito de mejorar la vida de las personas. Con un enfoque discreto pero dedicado, trabajo en proyectos que combinan mi amor por la ingeniería con la 
     responsabilidad social. Fuera del ámbito profesional, me encuentro explorando la ciencia, disfrutando de los deportes y buscando maneras de contribuir positivamente a mi comunidad.
