--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -11,7 +11,7 @@ Samira:
     Samira Grayeb: 
     Mi pasión es por la ciencia y su divulgación, la ingeniería, la solución de problemas y el impacto comunitario.
     Mi camino se centra en fusionar la tecnología con el propósito de mejorar la vida de las personas. Con un enfoque discreto pero dedicado, trabajo en proyectos que combinan mi amor por la ingeniería con la 
-    responsabilidad social. Fuera del ámbito profesional, me encuentro explorando la ciencia, disfrutando de los deportes y buscando maneras de contribuir positivamente a mi comunidad.
+    responsabilidad social. Fuera del ámbito laboral, me encuentro explorando la ciencia, disfrutando de los deportes y buscando maneras de contribuir positivamente a mi comunidad.
     Mi objetivo es crear un `cambio significativo`, no solo en el mundo digital, sino también en el entorno que me rodea.
     
     
